#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-01
2013-01-30 Andy Salnikov
- removed unnecessary .get() on smart pointers

Tag: V00-03-00
2013-01-30 Andy Salnikov
- switching to const ndarrays for array data
- ndarray has operator<<(ostream) now, use it do dump array data

Tag: V00-02-16
2012-11-28 Andy Salnikov
- change in Source constructor

Tag: V00-02-15
2012-11-15 Andy Salnikov
- add BldDataGMDV0 and BldDataGMDV1 to DumpBld module

Tag: V00-02-14
2012-11-08 Andy Salnikov
- dump hex damage mask for bld ebeam classes
- add princeton::ConfigV4 class

Tag: V00-02-13
2012-09-28 Andy Salnikov
- DumpControl.cpp: fix for the code which prints labes

Tag: V00-02-12
2012-09-28 Andy Salnikov
- update examples with new classes from pdsdata V04-01-00

Tag: V00-02-11
2012-07-06 Andy Salnikov
- add new module DumpQuartz
- change DumpPnccd to dump FullFrameV1 class

Tag: V00-02-10
2012-06-22 Andy Salnikov
- EvrData.EventCodeV5: one member method was incorrectly named

Tag: V00-02-09
2012-06-07 Andy Salnikov
- DumpTimepix.cpp: add comment about Timepix::DataV1 class 

Tag: V00-02-08
2012-06-03 Andy Salnikov
- added code to dump new type CsPad::ConfigV4

Tag: V00-02-07
2012-05-11 Andy Salnikov
- added code to dump new type Princeton::ConfigV3
- added code to dump new type EvrData::ConfigV6

Tag: V00-02-06
2012-03-27 Andy Salnikov
- added code to dump new type BldDataEBeamV3

Tag: V00-02-05
2012-03-14 Andy Salnikov
- added code to dump new type TimePix::ConfigV2

Tag: V00-02-04
2012-02-18 Andy Salnikov
- added code to dump new type TimePix::DataV2
- updated Ipimb Config code to dump diodeGain() contents

Tag: V00-02-03
2012-02-06 Andy Salnikov